a1/public/css/comments.css
.comment-thread {
  float: left;
  clear: both;
	left:	50px;
	position: relative;
  margin-top: 20px;
}

.comment-thread:last-child {
  margin-bottom: 20px;
}

.topic-text {
    text-decoration: underline;
    margin-bottom: 0px;
    cursor: default;
}

a {
    text-decoration: none;
    font-size: 13px;
    color: #c89e9e;
    margin-bottom: 10px;
}

.reply-button {
    color: #888888;
    font-weight: bold;
    padding: 0 1px;
    cursor: default;
}

input, textarea {
    width: 400px;
}

.comment-box {
    width: 300px;
    height: 70px;
    margin-top: 30px;
}

.comment-editor * {
    display: block;
}

.page-header {
    margin-top: 20px;
}

h1 {
    display: inline-block;
    vertical-align: middle;
    margin-right: 50px;
}

.header-container {
    margin-top: 0;
    background-color: white;
    position: fixed;
    top: 0;
}

.post-link {
    display: block;
}
.voting-container {
    cursor: pointer;
    float: left;
    clear: left;
    vertical-align: middle;
    text-align: right;
}

.entry-container {
  float: left;
  margin-left: 10px;
}

.upvote-icon {
    display: block;
}

div#topics {
    margin-top: 120px;
    margin-bottom: 100px;
}

form#new-topic-form {
    display: none;
    margin-top: 30px;
    position: relative;
    left: -80px;
}

div[id*=":"] {
    display: none;
}

